--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
-  </head>
-  <body>
+  </head>  <body>
+
     <h1>Aperture Laboratories</h1>
     <pre class="display"></pre>
-
     <script src="/js/moment.min.js"></script>
     <script>
       let employeesTime = [];
